--- a/app/views/management/steps_shared/_footer.html.erb
+++ b/app/views/management/steps_shared/_footer.html.erb
@@ -8,16 +8,19 @@
     <div>
       <% if !local_assigns.key?(:continue) || local_assigns[:continue] %>
         <%= f.button Management::PageStepsController::CONTINUE,
+          id: 'testing',
           type: continue_button_type(f.object.id, local_assigns[:always_save], local_assigns[:never_save], local_assigns[:publish]),
           value: Management::PageStepsController::CONTINUE,
-          class: "c-button #{(f.object.id || local_assigns[:always_save]) ? ' -outline -dark-text' : 'js-submit'}" %>
+          class: "c-button #{(f.object.id || local_assigns[:always_save]) ? ' -outline -dark-text' : 'js-submit'}",
+          onclick: "document.getElementById('submit_form').submit()" %>
       <% end %>
 
       <% if save_button?(f.object.id, local_assigns[:always_save], local_assigns[:never_save]) %>
         <%= f.button Management::PageStepsController::SAVE,
           value: Management::PageStepsController::SAVE,
           type: local_assigns[:publish] ? 'button' : 'submit',
-          class: "c-button #{local_assigns[:publish] ? '-outline -dark-text' : 'js-submit'}" %>
+          class: "c-button #{local_assigns[:publish] ? '-outline -dark-text' : 'js-submit'}",
+          onclick: local_assigns[:publish] ? "document.getElementById('submit_form').submit()" : ""%>
       <% end %>
 
       <% if local_assigns[:publish] %>
