--- a/app/views/management/dataset_steps/context.html.erb
+++ b/app/views/management/dataset_steps/context.html.erb
@@ -9,7 +9,7 @@
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, resource: @dataset, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
-<%= form_for @dataset, url: wizard_path, method: :put do |f| %>
+<%= form_for @dataset, url: wizard_path, method: :put, html: {id: 'submit_form'} do |f| %>
   <div class="l-dataset-creation -context">
     <div class="wrapper">
       <div class="c-cards-list">
