--- a/app/views/management/page_steps/position.html.erb
+++ b/app/views/management/page_steps/position.html.erb
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<%= form_for(@page, url: wizard_path, method: :put, html: { class: 'js-form'}) do |f| %>
+<%= form_for(@page, url: wizard_path, method: :put, html: {class: 'js-form', id: 'submit_form'}) do |f| %>
   <%= f.hidden_field :parent_id, class: 'js-parent_id' %>
   <%= f.hidden_field :position, class: 'js-position' %>
   <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
