Fix problem with new map site pages

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -23,12 +23,8 @@
           } catch (e) {}
         }
       });
-      var analysisModulesValue;
-      try {
-        analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.squish.gsub("'", "\\\\'").squish.html_safe %>');
-      } catch (err) {
-        analysisModulesValue = JSON.parse('{}');
-      }
+
+      var analysisModulesValue = JSON.parse('<%= parse_map_field(settings.object.analysisModules) %>');
 
       analysisModulesContainer.editor = analysisModulesEditor;
       analysisModulesContainer.input = analysisModulesInput;
