Updated existing code with ruby styles

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -109,13 +109,13 @@
         <ul>
           <% @menu_root.children.each do |child_page| -%>
               <% next unless (child_page.show_on_menu && child_page.visible?) %>
-              <li class="<%= 'dropdown-item' if child_page.has_visible_children? %><%= ' -group' if child_page.content_type.equal?(ContentType::GROUP) %><%= (child_page.id == @active_menu_item) ? ' -active' : ''%>">
-                <% if @site_page.site_template.name == 'INDIA' and child_page.has_visible_children? %>
+              <li class="<%= 'dropdown-item' if child_page.visible_children? %><%= ' -group' if child_page.content_type.equal?(ContentType::GROUP) %><%= (child_page.id == @active_menu_item) ? ' -active' : ''%>">
+                <% if @site_page.site_template.name == 'INDIA' and child_page.visible_children? %>
                   <%= link_to child_page.name, "#" %>
                 <% else %>
                   <%= page_link child_page %>
                 <% end %>
-                <% if child_page.has_visible_children? %>
+                <% if child_page.visible_children? %>
                     <ul>
                       <li>
                         <% if @site_page.site_template.name == 'INDIA' %>
