--- a/app/views/layouts/standalone.html.erb
+++ b/app/views/layouts/standalone.html.erb
@@ -10,8 +10,10 @@
 
   <meta property="og:title" content="<%= @title %>" />
 
-  <link rel="icon" type="image/png" href="<%= @favico %>" />
-  <link rel="apple-touch-icon" href="<%= @favico %>">
+  <% if @favico %>
+    <link rel="icon" type="image/png" href="<%= @favico %>" />
+    <link rel="apple-touch-icon" href="<%= @favico %>">
+  <% end %>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 
   <%= stylesheet_link_tag 'front/application-theme-default', media: 'all', 'data-turbolinks-track': 'reload' %>
