Remove the last bits of the widget-editor v1

--- a/app/assets/stylesheets/components/shared/c-widget-card.scss
+++ b/app/assets/stylesheets/components/shared/c-widget-card.scss
@@ -34,14 +34,14 @@
     min-height: 250px;
     margin-bottom: 10px;
 
-    .c-we-chart {
+    > div {
       display: flex;
       flex-direction: column;
       width: 100%;
       flex-basis: 100%;
       flex-grow: 1;
 
-      .chart {
+      > div {
         width: 100%;
         flex-basis: 100%;
         flex-grow: 1;
