--- a/app/assets/stylesheets/components/shared/c-dashboard-chart-view.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-chart-view.scss
@@ -15,10 +15,10 @@
     }
   }
 
-  .c-we-chart {
+  > div {
     position: relative; // For the legend
     height: 400px;
 
-    .chart { height: 100%; }
+    > div { height: 100%; }
   }
 }
