--- a/app/assets/stylesheets/front/_template-default.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-default.css.scss.erb
@@ -6,6 +6,7 @@ $template: 'default';
 
 @import
 '../../../node_modules/rc-slider/assets/index',
+'../../../node_modules/flatpickr/dist/flatpickr.min',
 '../../../node_modules/react-select/dist/react-select',
 '../../../node_modules/vizz-wysiwyg/build/rw',
 '../../../node_modules/slick-carousel/slick/slick.scss',
