--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -4,6 +4,8 @@
   'select2',
   'bootstrap',
   '../../../../node_modules/vizz-wysiwyg/build/rw',
+  '../../../node_modules/flatpickr/dist/flatpickr.min',
+  '../../../node_modules/react-select/dist/react-select',
   '../helpers',
   'settings',
   '../base',
