--- a/app/assets/stylesheets/components/front/c-standalone-widget.scss
+++ b/app/assets/stylesheets/components/front/c-standalone-widget.scss
@@ -2,7 +2,15 @@
   height: calc(100vh - 20px);
   padding: 10px 0;
 
-  > div {
+  > div:not([class*="legend"]) {
     height: 100%;
+  }
+
+  ul {
+    display: revert;
+
+    > li {
+      display: revert;
+    }
   }
 }
