--- a/app/assets/stylesheets/front/application-theme-default.scss
+++ b/app/assets/stylesheets/front/application-theme-default.scss
@@ -22,6 +22,7 @@ $footer-links-color: 'accent-color'; // String: «white», «accent-color»
 
 @import
 '../../../node_modules/rc-slider/assets/index',
+'../../../node_modules/flatpickr/dist/flatpickr.min',
 '../../../node_modules/react-select/dist/react-select',
 '../../../node_modules/vizz-wysiwyg/build/rw',
 '../../../node_modules/slick-carousel/slick/slick.scss',
