--- a/app/assets/stylesheets/front/application-theme-ind.scss
+++ b/app/assets/stylesheets/front/application-theme-ind.scss
@@ -23,6 +23,7 @@ $footer-links-color: 'white'; // String: «white», «accent-color»
 
 @import
 '../../../node_modules/rc-slider/assets/index',
+'../../../node_modules/flatpickr/dist/flatpickr.min',
 '../../../node_modules/react-select/dist/react-select',
 '../../../node_modules/vizz-wysiwyg/build/rw',
 'leaflet',
