Upgrade the widget-editor to v2
Squashed commit of the following:

commit af163aa308585d0df0567250fa343db2ca4dad4e
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Mon Aug 17 15:04:53 2020 +0100

    Tweaks and bugs fixes

commit 53364cfc24ec00e27c15e6f321cec7c5e494b392
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Mon Aug 17 10:03:35 2020 +0100

    Fix bug breaking Open Content pages (empty)

commit 3f871bd904c400cc3879d25b6f5e318a745eab1b
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Aug 14 15:19:41 2020 +0100

    Add missing dependency

commit baa045a9fe82a6b7d07ef6aa358831d8adc2e2b5
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Aug 14 13:16:03 2020 +0100

    Remove unneeded dependency used in v1

commit 54ccd31f238f0aee31fc5913f461c16822400642
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Aug 14 13:13:20 2020 +0100

    Upgrade the widget-editor to 2.3.1

commit 7e393b72fdb012eeb088fd2c839067507b44d7c5
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Jun 5 13:02:31 2020 +0100

    Remove the last bits of the widget-editor v1

commit 8943572710a6fd169a9b4fa4552911ec03aa3bb6
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Jun 5 11:23:06 2020 +0100

    Remove unused code after migration of widget-editor

commit d24fdaf0fc27c8be6cf9159df5d379b5e02d66b0
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Jun 5 11:22:50 2020 +0100

    Update the StandaloneWidget component

    Use the new version of the widget-editor.

commit 3afc8c3769e5fd4d8bfbba9915cc3307eac88b6e
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Fri Jun 5 10:53:43 2020 +0100

    Update the widget edition page

commit 62d0968791b14b69ea65607d6208cdfb72f6e77e
Author: Clément Prod'homme <contact@clementprodhomme.fr>
Date:   Thu Jun 4 14:46:01 2020 +0100

    Start the migration of the widget-editor

--- a/app/assets/stylesheets/components/front/c-standalone-widget.scss
+++ b/app/assets/stylesheets/components/front/c-standalone-widget.scss
@@ -2,8 +2,15 @@
   height: calc(100vh - 20px);
   padding: 10px 0;
 
-  .c-we-chart,
-  .chart {
+  > div:not([class*="legend"]) {
     height: 100%;
+  }
+
+  ul {
+    display: revert;
+
+    > li {
+      display: revert;
+    }
   }
 }
