--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -3,8 +3,9 @@
   'jquery-ui',
   'select2',
   'bootstrap',
-  '../../../../node_modules/widget-editor/dist/styles.min',
   '../../../../node_modules/vizz-wysiwyg/build/rw',
+  '../../../node_modules/flatpickr/dist/flatpickr.min',
+  '../../../node_modules/react-select/dist/react-select',
   '../helpers',
   'settings',
   '../base',
